err/tracxmlrpc.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/TracXMLRPC-1.1.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tracrpc'...
Compiling './lib/python3.5/site-packages/tracrpc/api.py'...
***   File "./lib/python3.5/site-packages/tracrpc/api.py", line 305
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tracrpc/htdocs'...
Compiling './lib/python3.5/site-packages/tracrpc/json_rpc.py'...
***   File "./lib/python3.5/site-packages/tracrpc/json_rpc.py", line 164
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tracrpc/templates'...
Compiling './lib/python3.5/site-packages/tracrpc/ticket.py'...
***   File "./lib/python3.5/site-packages/tracrpc/ticket.py", line 180
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tracrpc/web_ui.py'...
***   File "./lib/python3.5/site-packages/tracrpc/web_ui.py", line 105
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tracrpc/wiki.py'...
***   File "./lib/python3.5/site-packages/tracrpc/wiki.py", line 197
    raise ResourceNotFound, 'Wiki page "%s" does not exist' % pagename
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tracrpc/xml_rpc.py'...
***   File "./lib/python3.5/site-packages/tracrpc/xml_rpc.py", line 116
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
